--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express-error-handle": "^1.0.0",
+    "express": "^4.17.3",
+    "express-error-handle": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
     "nodemon": "^2.0.15"
@@ -11,7 +13,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "nodemon": "nodemon server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
