--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["fillup", "middlewares", "soilight", "valided"]
+  "cSpell.words": ["Emon", "fillup", "middlewares", "soilight", "valided"]
 }
