--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_USER=messKhujunDB
-DB_PASS=9sd7qEmXC1tTN8Qh
+DB_USER=soilight
+DB_PASS=D58Gu86hVX9cSWb0
 NODE_ENV=development
 JWT_SECRET=emon12345
 
