--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "express-error-handle": "^1.0.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.3",
-    "nodemon": "^2.0.15"
-  },
-  "name": "soilight",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "1emonislam <emonislamweb@gmail.com> (https://portfolio-emonislam.netlify.app/)",
-  "license": "ISC",
-  "description": ""
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.0",
+		"express": "^4.17.3",
+		"express-error-handle": "^1.0.2",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^6.2.3",
+		"nodemon": "^2.0.15",
+		"socket.io": "^4.4.1"
+	},
+	"name": "soilight",
+	"version": "1.0.0",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js",
+		"dev": "nodemon server.js"
+	},
+	"keywords": [],
+	"author": "1emonislam <emonislamweb@gmail.com> (https://portfolio-emonislam.netlify.app/)",
+	"license": "ISC",
+	"description": ""
 }
