--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USER=soilight
 DB_PASS=D58Gu86hVX9cSWb0
-NODE_ENV=development
 JWT_SECRET=emon12345
-TWILIO_ACCOUNT_SID=
-TWILIO_AUTH_TOKEN=
+TWILIO_ACCOUNT_SID=AC84c19bc91a6db1503605986e701c06da
+TWILIO_AUTH_TOKEN=1f05fa1ae5cb2596afb9c8c9f32ccf20
+SERVICE_ID=VA6780453930d0921599bfb311b2aba2a4
