--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.2.6",
 		"nodemon": "^2.0.15",
-		"socket.io": "^4.4.1"
+		"socket.io": "^4.4.1",
+		"twilio": "^3.76.0"
 	},
 	"name": "soilight",
 	"version": "1.0.0",
