--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,7 @@ env:
   CLOUDINARY_API_SECRET: ${{secrets.CLOUDINARY_API_SECRET}}
   CLOUDINARY_NAME: ${{secrets.DB_PASS}}
   DB_USER: ${{secrets.DB_USER}}
-  JWT_SECRET: ${{secrets.NODE_ENV}}
+  JWT_SECRET: ${{secrets.JWT_SECRET}}
   TWILIO_ACCOUNT_SID: ${{secrets.TWILIO_ACCOUNT_SID}}
   TWILIO_AUTH_TOKEN: ${{secrets.TWILIO_AUTH_TOKEN}}
 jobs:
