--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,7 +9,7 @@ on:
 env:
   CLOUDINARY_API_KEY: ${{secrets.CLOUDINARY_API_KEY}}
   CLOUDINARY_API_SECRET: ${{secrets.CLOUDINARY_API_SECRET}}
-  CLOUDINARY_NAME: ${{secrets.DB_PASS}}
+  CLOUDINARY_NAME: ${{secrets.CLOUDINARY_NAME}}
   DB_USER: ${{secrets.DB_USER}}
   JWT_SECRET: ${{secrets.JWT_SECRET}}
   TWILIO_ACCOUNT_SID: ${{secrets.TWILIO_ACCOUNT_SID}}
