--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,8 +12,10 @@ env:
   CLOUDINARY_NAME: ${{secrets.CLOUDINARY_NAME}}
   DB_USER: ${{secrets.DB_USER}}
   JWT_SECRET: ${{secrets.JWT_SECRET}}
+  SERVICE_ID: ${{secrets.SERVICE_ID}}
   TWILIO_ACCOUNT_SID: ${{secrets.TWILIO_ACCOUNT_SID}}
   TWILIO_AUTH_TOKEN: ${{secrets.TWILIO_AUTH_TOKEN}}
+  SERVICE_EMAIL: ${{secrets.SERVICE_EMAIL}}
 jobs:
   build:
     runs-on: self-hosted
